--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+<h2>欢迎使用 AAPHP ☺</h2>
+<h3>这里是详细、简单的例子，了解更多，请阅读源码</h3>
+<p>控制器：aaphp/application/example/controller/*</p>
+<p>模　型：aaphp/application/example/model/*</p>
+<p>验证器：aaphp/application/example/validate/*</p>
+<p>视　图：aaphp/application/example/view/*</p>
 <h3>控制器</h3>
 <ul>
     <li>
@@ -33,7 +39,7 @@
         <a href="{:aaphp\Url::build('example/ViewController/jsonExample')}" target="_blank">输出json</a>
     </li>
     <li>
-        <a href="{:aaphp\Url::build('example/ViewController/openXssFilter')}" target="_blank">xss 过滤</a>
+        <a href="{:aaphp\Url::build('example/ViewController/xss')}" target="_blank">xss 过滤</a>
     </li>
     <li>
         <a href="{:aaphp\Url::build('example/ViewController/closeXssFilter')}" target="_blank">关闭 xss 过滤</a>
