--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -27,13 +27,22 @@
         <a href="{:aaphp\Url::build('example/ViewController/fetchExample')}" target="_blank">获取视图</a>
     </li>
     <li>
+        <a href="{:aaphp\Url::build('example/ViewController/fetchDesignated')}" target="_blank">获取指定的视图</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ViewController/functionExample')}" target="_blank">模版中使用函数</a>
+    </li>
+    <li>
         <a href="{:aaphp\Url::build('example/ViewController/assignExample')}" target="_blank">分配参数到视图</a>
     </li>
     <li>
         <a href="{:aaphp\Url::build('example/ViewController/includeExample')}" target="_blank">引入头部和底部</a>
     </li>
     <li>
-        <a href="{:aaphp\Url::build('example/ViewController/tagExample')}" target="_blank">模版标签使用</a>
+        <a href="{:aaphp\Url::build('example/ViewController/foreachExample')}" target="_blank">循环标签例子</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ViewController/ifExample')}" target="_blank">判断标签例子</a>
     </li>
     <li>
         <a href="{:aaphp\Url::build('example/ViewController/jsonExample')}" target="_blank">输出json</a>
