--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -171,6 +171,9 @@
     <li>
         <a href="{:aaphp\Url::build('example/RequestController/requestParam',['name'=>'lucy','age'=>18])}" target="_blank">获取请求传参</a>
     </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/RequestController/json',['name'=>'lucy','age'=>18])}" target="_blank">获取json格式参数</a>
+    </li>
 </ul>
 
 
