--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -42,7 +42,7 @@
         <a href="{:aaphp\Url::build('example/ViewController/foreachExample')}" target="_blank">循环标签例子</a>
     </li>
     <li>
-        <a href="{:aaphp\Url::build('example/ViewController/ifExample')}" target="_blank">判断标签例子</a>
+        <a href="{:aaphp\Url::build('example/ViewController/ifExample',['id'=>123])}" target="_blank">判断标签例子</a>
     </li>
     <li>
         <a href="{:aaphp\Url::build('example/ViewController/jsonExample')}" target="_blank">输出json</a>
